@@ -1,5 +1,11 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.420 2005/12/02 20:54:52 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.421 2005/12/02 21:39:37 wolf31o2 Exp $
+
+  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/rc-update.sh:
+  OK, just kidding on that last commit. We were already doing rc-update add
+  xdm default in livecdfs-update.sh and since it is a livecd-only function,
+  there's no point in having it in rc-update.sh
 
   02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/rc-update.sh:
